--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -1,5 +1,6 @@
 .container.testimonials__container {
   width: 40%;
+  padding-bottom: 4rem;
 }
 
 .client__avatar {
@@ -26,15 +27,18 @@
   width: 80%;
   margin: 0.8 rem auto 0;
 }
+.swiper-pagination-clickable .swiper-pagination-bullet {
+  background: var(--color-primary);
+}
 /* ============ MEDIA QUERY (MEDIUM DEVICES) ========= */
 @media screen and (max-width: 1024px) {
-  .container .testimonials__container {
+  .container.testimonials__container {
     width: 60%;
   }
 }
 /* ============ MEDIA QUERY (SMALL DEVICES) ========= */
 @media screen and (max-width: 600px) {
-  .container .testimonials__container {
+  .container.testimonials__container {
     width: var(--container-width-sm);
   }
   .client__review {
